# cmdcheck

./: .gitignore  .gitmodules  AUDIT_ACTION_PLAN.md  CLAUDE.md  DEPLOYMENT.md  DOMAIN_SETUP.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: classifier.py  db.py  decoder.py  email.py  encryption.py  gtfobins.py  ip_extractor.py  lolbas.py  loldrivers.py  main.py  mitre.py  parent_score.py  parser.py  redactor.py  scoring.py  slug.py  story.py  stripe_billing.py  threat_actors.py  threat_intel.py  url_extractor.py  users.py  virustotal.py
backend/data/: attack_techniques.json  loldrivers.json  threat_actors.json
backend/migrations/: 001_init.sql  002_tombstone.sql  003_accounts.sql  004_admin.sql  005_email_verification.sql  006_threat_groups.sql  007_search_index.sql  008_stripe.sql  009_private_analyses.sql  010_workspaces.sql  011_api_keys.sql  012_encrypted_commands.sql  013_password_reset.sql
backend/scripts/: check_live.py  fetch_attack_stix.py  fetch_loldrivers.py  mock_server.py
backend/tests/: conftest.py  test_analyze.py  test_classifier_fixtures.py  test_decoder.py  test_depth.py  test_integration.py  test_stress.py
backend/tests/fixtures/: README.md  build_fixtures.py  credentials.json  data_staging.json  defense_evasion.json  encoding.json  false_positives.json  gen.py  gtfobins.json  lateral_movement.json  lolbas.json  persistence.json  real_world.json
frontend/: .env.local.example  Dockerfile  auth.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  (+1 more)
(+64 files in other folders)
